--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/hermanwill/loteryoracle#readme",
   "dependencies": {
+    "dotenv": "^17.2.0",
     "hardhat": "^2.25.0"
   },
   "devDependencies": {
